Add jolokia and hawt